--- a/proses-wh/index.html
+++ b/proses-wh/index.html
@@ -127,7 +127,6 @@
     </style>
   </head>
   <body class="h-screen flex">
-    <!-- Alert Modal -->
     <div
       id="alertModal"
       class="hidden fixed top-4 left-1/2 -translate-x-1/2 bg-red-500 text-white px-4 py-3 rounded-lg shadow-lg flex items-center justify-between gap-3 z-50 text-4xl"
@@ -142,6 +141,12 @@
     </div>
 
     <!-- Sidebar kiri -->
+    <!-- Pastikan sudah load Bootstrap Icons CSS -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css"
+    />
+
     <div
       id="sidebar"
       class="w-[27%] min-[1920px]:w-[20%] p-2 border-r border-gray-300 flex flex-col"
@@ -316,7 +321,7 @@
       <div id="detail"></div>
     </div>
 
-    <!-- Stock Selection Modal -->
+    <!-- Modal -->
     <div
       id="layer-2-modal"
       class="fixed inset-0 bg-black bg-opacity-50 hidden flex items-center justify-center z-50"
@@ -347,7 +352,8 @@
       </div>
     </div>
 
-    <!-- External Libraries -->
+    <!-- Libraries -->
+    <!-- <script src="https://unpkg.com/lucide@latest"></script> -->
     <script
       src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"
       crossorigin="anonymous"
@@ -369,8 +375,414 @@
       crossorigin="anonymous"
     ></script>
 
-    <!-- Application Scripts -->
     <script src="./script.js"></script>
-    <script type="module" src="./js/app.js"></script>
+
+    <script type="module">
+      import { initializeApp } from 'https://www.gstatic.com/firebasejs/12.0.0/firebase-app.js';
+      import {
+        getDatabase,
+        ref,
+        set,
+        get,
+        update,
+        push,
+        query,
+        remove,
+        orderByChild,
+        equalTo,
+        onValue,
+        off,
+      } from 'https://www.gstatic.com/firebasejs/12.0.0/firebase-database.js';
+      const app = initializeApp({
+        databaseURL:
+          'https://stock-wv-default-rtdb.asia-southeast1.firebasedatabase.app',
+      });
+      const db = getDatabase(app);
+
+      const app2 = initializeApp(
+        {
+          databaseURL:
+            'https://stk-wv-default-rtdb.asia-southeast1.firebasedatabase.app',
+        },
+        'app2'
+      );
+      const db2 = getDatabase(app2);
+
+      Object.assign(window, {
+        db,
+        db2,
+        ref,
+        set,
+        get,
+        update,
+        push,
+        query,
+        remove,
+        orderByChild,
+        equalTo,
+        onValue,
+        off,
+      });
+    </script>
+
+    <script>
+      var data = {};
+      var tempData = {};
+      let fbsSvc, fbsSvcX;
+
+      var countSumaryData = {
+        totalData: 0,
+        totalOnline: 0,
+        totalOffline: 0,
+        totalRetur: 0,
+        totalEkspedisi: 0,
+      };
+
+      // Cari data marketing by ID
+      function cariById(id) {
+        return data.nmMkt.find((item) => item.id_mkt === String(id)) || null;
+      }
+
+      function nmHlp(id) {
+        return data.helper.find((item) => item.id_hlp === id) || null;
+      }
+
+      function filterSummary(keyword) {
+        keyword = String(keyword || '')
+          .toLowerCase()
+          .trim();
+
+        // Ambil semua data dari data.dataside
+        const allData = Object.values(data.dataside || {});
+
+        // Hasil filter
+        const hasil = !keyword
+          ? allData
+          : allData.filter(
+              (item) =>
+                String(item.id_sj).toLowerCase().includes(keyword) ||
+                String(item.id_mkt).toLowerCase().includes(keyword) ||
+                String(item.jml_item).toLowerCase().includes(keyword) ||
+                String(item.mkt || '')
+                  .toLowerCase()
+                  .includes(keyword) ||
+                String(item.stamp || '')
+                  .toLowerCase()
+                  .includes(keyword)
+            );
+
+        // Simpan hasil filter ke dalam data.hasil_filter
+        data['hasil_filter'] = hasil;
+
+        return hasil; // opsional, tetap bisa digunakan langsung
+      }
+      /*
+  // Fungsi filter berdasarkan input
+  function filterSummary(keyword) {
+    keyword = String(keyword || "").toLowerCase().trim();
+
+    if (!keyword) return Object.values(data.dataside || {});
+
+    return Object.values(data.dataside || {}).filter(item =>
+      String(item.id_sj).toLowerCase().includes(keyword) ||
+      String(item.id_mkt).toLowerCase().includes(keyword) ||
+      String(item.jml_item).toLowerCase().includes(keyword) ||
+      String(item.mkt || "").toLowerCase().includes(keyword) ||
+      String(item.stamp || "").toLowerCase().includes(keyword)
+    );
+  }
+  */
+
+      // Render awal atau setelah filter
+      function renderFiltered(keyword) {
+        const filtered = filterSummary(keyword);
+        renderElemenSummary(filtered);
+        // console.log("filter")
+        renderJumlahDataSummary();
+      }
+
+      // Load data SJ sesuai tanggal
+      function loadDataSJ(tgl) {
+        prosesDataSJ('https://cdn.weva.my.id/apix/dtSj', { tgl }, (result) => {
+          data.result = result;
+          data.dataside = data.result.summary;
+          renderElemenSummary(data.dataside);
+          renderJumlahDataSummary();
+        });
+      }
+
+      function cariByIdSj(idSj) {
+        const targetId = Number(idSj); // pastikan jadi number agar presisi
+        return data.result.raw.filter(
+          (item) => Number(item.id_sj) === targetId
+        );
+      }
+
+      function ambilDataBarang(cb) {
+        fbsSvcX.gDt('kain', '', (d) => {
+          let hasil = Object.values(d)
+            .flat()
+            .map((item) => ({
+              c_e: item.c_e,
+              c_g: item.c_g,
+              c_h: item.c_h,
+              e: item.e,
+              g: item.g,
+              ik: item.ik,
+              k: item.k,
+              kd_jns: item.kd_jns,
+              kd_wrn: item.kd_wrn,
+              s: item.s,
+            }));
+
+          // simpan ke dalam variabel global data
+          data['kain'] = hasil;
+
+          // kalau ada callback, panggil dengan hasil
+          if (typeof cb === 'function') {
+            cb(hasil);
+          }
+        });
+      }
+
+      function getDtStock(id, callback) {
+        fbsSvcX.gDt(`layer2/${id}`, '', (d) => {
+          // filter data: buang yang stts == 'h'
+          let filtered = Array.isArray(d)
+            ? d.filter((item) => item.stts !== 'h')
+            : [];
+
+          data['layer2'] = filtered;
+          if (typeof callback === 'function') {
+            callback(filtered); // kirim data yang sudah difilter
+          }
+        });
+      }
+
+      $(function () {
+        // Ambil param tanggal dari URL
+        const params = new URLSearchParams(window.location.search);
+        const today = stm('t');
+        let initDate = params.get('tgl') || today;
+
+        // Jika URL tidak ada ?tgl=..., set default
+        if (!params.has('tgl')) {
+          params.set('tgl', today);
+          window.history.replaceState({}, '', `?${params.toString()}`);
+        }
+
+        // Set nilai awal input tanggal
+        $('#tanggalInput').val(initDate);
+
+        // Event input search
+        $('#cariDataSj').on('input', function () {
+          renderFiltered($(this).val());
+        });
+
+        // Event change tanggal
+        $('#tanggalInput').on('change', function () {
+          const selectedDate = $(this).val();
+          params.set('tgl', selectedDate);
+          window.history.replaceState({}, '', `?${params.toString()}`);
+          loadDataSJ(selectedDate);
+        });
+
+        // Load data marketing & data SJ
+        fbsSvc = new Fbs(db);
+        fbsSvcX = new Fbs(db2);
+
+        // Initialize all event listeners once
+        initializeEventListeners();
+
+        // fbsSvcX.gDt('layer2','',(d)=>{
+        //   let arr = [];
+
+        //   if (Array.isArray(d)) {
+        //     arr = d;
+        //   } else if (d && typeof d === 'object') {
+        //     arr = Object.values(d);
+        //   } else {
+        //     console.warn('Data layer2 tidak valid:', d);
+        //   }
+
+        //   // group berdasarkan id_kain
+        //   data.layer2 = arr.reduce((groups, item) => {
+        //     const key = item.id_kain || 'unknown'; // default 'unknown' kalau tidak ada id_kain
+        //     if (!groups[key]) groups[key] = [];
+        //     groups[key].push(item);
+        //     return groups;
+        //   }, {});
+        // });
+
+        fbsSvcX.gDt('app/data/helper', '', (d) => {
+          let arr = [];
+
+          if (Array.isArray(d)) {
+            arr = d;
+          } else if (d && typeof d === 'object') {
+            arr = Object.values(d);
+          } else {
+            console.warn('Data helper tidak valid:', d);
+          }
+
+          data.helper = arr
+            .filter((val) => val.stts !== '' && val.stts !== 0) // filter stts kosong atau 0
+            .map((val) => ({
+              hlp: val.hlp || '',
+              id_hlp: val.id_hlp || '',
+            }));
+        });
+
+        fbsSvc.gDt('/user', '', (d) => {
+          let arr = [];
+
+          if (Array.isArray(d)) {
+            arr = d;
+          } else if (d && typeof d === 'object') {
+            arr = Object.values(d);
+          } else {
+            console.warn('Data marketing tidak valid:', d);
+          }
+
+          data.nmMkt = arr.map((val) => ({
+            usr: val.usr || '',
+            mkt: val.mkt || '',
+            id_mkt: val.id_mkt || '',
+          }));
+
+          loadDataSJ(initDate);
+
+          ambilDataBarang((d) => {
+            console.log(data.kain);
+          });
+        });
+      });
+    </script>
+
+    <script>
+      // simpan timer di luar supaya bisa di-clear saat dipanggil lagi
+      let alertTimer = null;
+      let alertCountdown = null;
+
+      function tampilkanPilihanStockLain(d) {
+        // getDtStock(d,(r)=>{
+        //   console.log(data.tempOlahSj);
+        //   console.log(d,r);
+        // });
+      }
+
+      function showAlert(message, duration = 3000) {
+        const modal = document.getElementById('alertModal');
+        const msg = document.getElementById('alertMessage');
+        const btnClose = document.getElementById('alertBtn');
+
+        if (!modal || !msg || !btnClose) return;
+
+        // clear timer lama
+        if (alertTimer) clearTimeout(alertTimer);
+        if (alertCountdown) clearInterval(alertCountdown);
+
+        let timeLeft = Math.ceil(duration / 1000);
+        msg.textContent = message;
+        btnClose.innerHTML = `<i class="bi bi-x-lg"></i> (${timeLeft})`;
+
+        modal.classList.remove('hidden');
+        modal.classList.add('flex', 'opacity-0');
+
+        // fade-in
+        setTimeout(() => {
+          modal.classList.remove('opacity-0');
+
+          // 🔥 tambahkan animasi getar
+          modal.classList.add('shake');
+          setTimeout(() => modal.classList.remove('shake'), 300); // hapus setelah animasi selesai
+        }, 10);
+
+        // countdown
+        alertCountdown = setInterval(() => {
+          timeLeft--;
+          btnClose.innerHTML = `<i class="bi bi-x-lg"></i> (${timeLeft})`;
+          if (timeLeft <= 0) clearInterval(alertCountdown);
+        }, 1000);
+
+        // auto close
+        alertTimer = setTimeout(() => {
+          closeAlert();
+          clearInterval(alertCountdown);
+        }, duration);
+
+        // tombol close
+        btnClose.onclick = () => {
+          clearTimeout(alertTimer);
+          clearInterval(alertCountdown);
+          closeAlert();
+        };
+
+        function closeAlert() {
+          modal.classList.add('opacity-0');
+          setTimeout(() => {
+            modal.classList.add('hidden');
+            modal.classList.remove('flex');
+          }, 300);
+        }
+      }
+    </script>
+
+    <script>
+      // Fungsi untuk menampilkan pilihan stock lain di modal
+      function tampilkanPilihanStockLain(id) {
+        getDtStock(id, (r) => {
+          let html = r
+            .map((item) => {
+              const outCount =
+                item.c == 0
+                  ? ''
+                  : `<span class="px-2 py-0.5 bg-red-100 text-red-700 text-lg font-semibold rounded-full shadow-sm border border-red-300">
+              <i class="bi bi-arrow-up"></i> ${item.c}
+            </span>`;
+              return `
+              <div class="item border p-2 mb-2 rounded cursor-pointer hover:bg-gray-100 text-lg flex items-center gap-1 flex-wrap item-stock-alternatif"
+                  data-id="${item.id_stock}" data-id-kain="${item.id_kain}">
+
+                <!-- ID Stock & RTR -->
+                <span class="px-2 py-0.5 bg-blue-100 text-blue-700 font-semibold rounded-full shadow-sm border border-blue-300">
+                  #${item.id_stock} <b class='text-red-400'>${
+                item.id_rtr == '?' ? '' : 'R'
+              }</b>
+                </span>
+
+                ${item.ltrl}
+
+                <!-- LTRL & RKKL -->
+                <span class="px-2 py-0.5 bg-gray-100 text-gray-600 rounded-full shadow-sm border border-gray-300">
+                  <i class="bi bi-geo-alt-fill"></i> ${item.rkkl}
+                </span>
+
+                <!-- Quantity -->
+                <span class="px-2 py-0.5 bg-green-100 text-green-700 font-bold rounded-full shadow-sm border border-green-300">
+                  ${item.q}
+                </span>
+
+                ${outCount}
+
+                <!-- Status -->
+                <span class="px-2 py-0.5 font-medium rounded-full shadow-sm
+                  ${
+                    item.stts === 'g'
+                      ? 'bg-blue-100 text-blue-700 border border-blue-300'
+                      : item.stts === 'e'
+                      ? 'bg-yellow-100 text-yellow-700 border border-yellow-300'
+                      : 'bg-red-100 text-red-700 border border-red-300'
+                  }">
+                  ${item.stts.toUpperCase()}
+                </span>
+              </div>`;
+            })
+            .join('');
+
+          $('#modal-content-layer-2 .list-stock').html(html);
+        });
+      }
+    </script>
   </body>
 </html>
